--- a/wally.toml
+++ b/wally.toml
@@ -10,7 +10,7 @@ Networker = "leifstout/networker@0.3.1"
 Signal = "sleitnick/signal@2.0.3"
 
 [server-dependencies]
-ProfileService = "firebird702/profileservice@1.1.0"
+DataService = "leifstout/dataservice@0.4.0"
 
 [place]
 shared-packages = "src/ReplicatedStorage/ServerPackages"
